--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ header {
     height: 100%;
 }
 
-.side-column {
+/* .side-column {
     width: 15%;
     padding-top: 8vh;
     text-align: right;
@@ -109,8 +109,8 @@ header {
 }
 
 .side-column a:hover {
-    color: var(--secondary-font-color);
-}
+    color: var(--secondary-font-color); */
+/* } */
 
 .welcome-board {
     display: flex;
@@ -270,4 +270,95 @@ main {
 
 .icons span:hover {
     opacity: 0.8;
+}
+
+#skills .wrapper-bar {
+    width: 100%;
+    height: 60vh;
+    background-color: var(--secondary-font-color);
+    padding-top: 1rem;
+    box-sizing: border-box;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 1rem;
+}
+
+#skills .wrapper-bar h2 {
+    font-size: 3rem;
+    text-align: center;
+    color: var(--primary-welcome-bg-color);
+}
+
+.flex-wrapper {
+    display: flex;
+    width: 100%;
+    height: 90%;
+    /* //border: tomato 1px solid; */
+    flex-direction: column;
+}
+.flex-row {
+    width: 100%;
+    /* //border: goldenrod 1px solid; */
+    display: flex;
+    
+}
+
+.flex-row .main-skills {
+    flex-grow: 5;
+    display:flex;
+
+}
+
+.flex-row .secondary-skills {
+    flex-grow: 3;
+    display: flex;
+}
+.main-skills {
+    font-size: 3rem;
+}
+.secondary-skills {
+    font-size: 2rem;
+}
+
+.skill {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    /* border: green 1px solid; */
+    height: 100%;
+    align-items: center;
+    padding: 1rem;
+    /* transition: opacity 0.2s ease-in-out; */
+}
+
+.main-skills span {
+    font-size: 8rem;
+}
+.secondary-skills span {
+    font-size: 4rem;  
+}
+
+.main-skills .skill {
+    width: 33%
+}
+.secondary-skills .skill {
+    width: 20%;
+}
+
+.skill span {
+    opacity: 0.8;
+    color: var(--primary-welcome-bg-color);
+    transition: opacity 0.2s ease-in-out;
+}
+.skill  span:hover {
+    opacity: 1;
+}
+.skill span:hover + .skill-name {
+    opacity: 1;
+}
+
+.skill-name {
+    opacity: 0;
+    color: var(--primary-welcome-bg-color);
+    transition: opacity 0.2s ease-in-out;
 }
