--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
     background: var(--primary-bg-color);
 }
 
-
 nav {
     display: flex;
     height: 3rem;
@@ -39,14 +38,13 @@ nav {
     width: 100%;
     list-style: none;
     position: relative;
-
 }
+
 .nav-bar a {
     text-decoration: none;
     transition: color 0.5s ease;
     font-weight: 800;
     font-size: 1.5rem;
-
 }
 
 .nav-bar a:hover {
@@ -61,6 +59,7 @@ nav {
     align-self: center;
     margin: 0 2%;
 }
+
 @media only screen and (max-width: 640px) {
     nav {
         height: 6rem;
@@ -72,7 +71,6 @@ nav {
         align-items: center;
         flex-wrap: wrap;
     }
-
 
     .nav-bar .ver-separator {
         width: 3px;
@@ -92,8 +90,6 @@ header {
     height: 99vh;
     width: 100%;
     background-image: linear-gradient(to right, var(--primary-welcome-bg-color) 0%, var(--primary-welcome-bg-color) 50%, var(--secondary-welcome-bg-color) 50%, var(--secondary-welcome-bg-color) 100%);
-
-
 }
 
 #wrapper-main {
@@ -132,13 +128,6 @@ header {
     width: 9rem;
 }
 
-.wrapper-bottom {
-    height: 10%;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-}
-
 .bottom-bar {
     width: 100%;
     height: 0.5rem;
@@ -153,8 +142,29 @@ header {
 @media only screen and (max-height: 600px) and (min-width: 481px)
 {
     .welcome-board {
-        padding-top: 10rem;
+        padding-top: 2rem;
+        height: 100vh;
     }
+
+    .welcome-board h1 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .welcome-board h2 {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        text-align: center;
+        font-size: 2rem;
+    }
+
+    .welcome-board .hor-separator {
+        display: block;
+        background-color: var(--primary-font-color);
+        height: 0.25rem;
+        width: 9rem;
+    }
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -163,15 +173,18 @@ header {
         background-image: none;
         background-color: var(--primary-welcome-bg-color);
     }
+
     .welcome-board h1 {
         font-size: 3rem;
         margin-bottom: 1rem;
     }
+
     .welcome-board h2 {
         font-size: 1.5rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
+
     .welcome-board .hor-separator {
         height: 0.25rem;
         width: 5rem;
@@ -189,6 +202,7 @@ main {
     width: 100%;
     position: relative;
 }
+
 #about {
     width: 100%;
     background-color: #333;
@@ -198,34 +212,34 @@ main {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    
 }
 
-#about .side-photo {
+.side-photo {
     flex: 1;
     padding: 5%;
     padding-top: 12%;
-}   
-#about .side-text {
+}  
+
+.side-text {
     flex: 2;
     display: flex;
     flex-direction: column;
     padding: 7vh 5% 1rem 5%;
 }
 
-#about .side-photo img {
+.side-photo img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-#about .side-text p {
+.side-text p {
     margin-top: 5%;
     text-align: justify;
     font-family: "Oswald", sans-serif;
 }
 
-#about .side-text .hor-separator {
+.side-text .hor-separator {
     display: block;
     background-color: var(--primary-font-color);
     height: 0.3rem;
@@ -233,7 +247,7 @@ main {
     margin-top: 1rem;
 }
 
-#about .side-text h2 {
+.side-text h2 {
     font-family: "Oswald", sans-serif;
 }
 
@@ -261,7 +275,7 @@ main {
         margin-top: 3%;
     }
 
-    #about .side-photo img {
+    .side-photo img {
         height: 25rem;
         width: 100%;
         object-fit: cover;
@@ -271,7 +285,7 @@ main {
         font-size: 1.3rem;
     }
 
-    #about .side-text {
+    .side-text {
         padding: 7rem 5% 0.2rem 5%;
     }
 }
@@ -329,10 +343,9 @@ main {
 /* needed to not be partialy hidded behind fixed navbar */
 #skills {
     padding-top: 7vh;
-    
 }
 
-#skills .wrapper-bar {
+.wrapper-bar {
     width: 100%;
     background-color: var(--secondary-font-color);
     padding-top: 1rem;
@@ -342,13 +355,10 @@ main {
     padding-bottom: 0.5rem;
 }
 
-
-
-#skills .wrapper-bar h2 {
+.wrapper-bar h2 {
     font-size: 3rem;
     text-align: center;
     color: var(--primary-welcome-bg-color);
-
 }
 
 .flex-wrapper {
@@ -357,26 +367,21 @@ main {
     height: 90%;
     flex-direction: column;
 }
+
 .flex-row {
     width: 100%;
     display: flex;
-    
 }
 
-.flex-row .main-skills {
+.main-skills {
     flex-grow: 5;
     display:flex;
-
-}
-
-.flex-row .secondary-skills {
-    flex-grow: 3;
-    display: flex;
-}
-.main-skills {
     font-size: 3rem;
 }
+
 .secondary-skills {
+    flex-grow: 3;
+    display: flex;
     font-size: 2rem;
 }
 
@@ -392,6 +397,7 @@ main {
 .main-skills span {
     font-size: 8rem;
 }
+
 .secondary-skills span {
     font-size: 4rem;  
 }
@@ -399,6 +405,7 @@ main {
 .main-skills .skill {
     width: 33%
 }
+
 .secondary-skills .skill {
     width: 20%;
 }
@@ -408,10 +415,12 @@ main {
     color: var(--primary-welcome-bg-color);
     transition: opacity 0.2s ease-in-out;
 }
+
 .skill  span:hover {
     opacity: 1;
 }
-.skill span:hover + .skill-name h3{
+
+.skill span:hover + .skill-name h3 {
     opacity: 1;
     font-family: "Oswald",
     "Poppins",
@@ -424,7 +433,8 @@ main {
     "Poppins",
     sans-serif;
 }
-.skill-name  h3{
+
+.skill-name  h3 {
     opacity: 0;
     color: var(--primary-welcome-bg-color);
     font-size: 3rem;
@@ -433,6 +443,7 @@ main {
     "Poppins",
     sans-serif;
 }
+
 .skill-name h4 {
     opacity: 0;
     color: var(--primary-welcome-bg-color);
@@ -443,11 +454,8 @@ main {
     sans-serif;
 }
 
-@media only screen and (min-width:481px) and (max-width:1024px)
+@media only screen and (min-width:641px) and (max-width:1024px)
 {
-    .wrapper-bar h2 {
-        margin-top: 4rem;
-    }
     .main-skills span {
         font-size: 6rem;
     }
@@ -455,8 +463,32 @@ main {
     .secondary-skills span {
         font-size: 3rem;
     }
+
     .skill-name h3 {
         font-size: 2rem; 
+    }
+
+    .skill-name h4 {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (min-width:481px) and (max-width:640px) {
+
+    .wrapper-bar h2 {
+        margin-top: 3rem;
+    }
+
+    .main-skills span {
+        font-size: 6rem;
+    }
+
+    .secondary-skills span {
+        font-size: 3rem;
+    }
+
+    .skill-name h3 {
+        font-size: 2rem;
     }
 
     .skill-name h4 {
@@ -467,11 +499,13 @@ main {
 @media only screen and (max-width: 480px)
 {
     .wrapper-bar  h2{
-        margin-top: 4rem;
+        margin-top: 3rem;
     }
+
     .flex-wrapper{
         align-items: center;
     }
+
     .main-skills {
         flex-direction: column;
         align-items: center;
@@ -482,7 +516,6 @@ main {
         height: 8rem;
     }
  
-
     .secondary-skills {
         font-size: 2rem;
         width: 90vw;
@@ -490,10 +523,7 @@ main {
         position:relative;
         justify-content: space-around;
     }
-
-
 }
-
 
 #projects {
     padding-top: 6rem;
@@ -509,7 +539,8 @@ main {
     grid-gap: 3vw;
     box-sizing: border-box;
 }
-.main-grid .project {
+
+.project {
     background-size: cover;
     position: relative;
     background-position: center;
@@ -520,49 +551,46 @@ main {
     width: 28vw;
 }
 
-.main-grid .project-overlay-text {
+.project-overlay-text {
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 3fr 1fr;
     z-index: 1;
-    
     opacity: 0;
     transition: opacity 0.2s ease-in-out
 }
 
-.main-grid .project:hover .project-overlay-text {
+.project:hover .project-overlay-text {
     opacity: 0.8;
 }
 
-
-.main-grid .project:nth-child(1) {
+.project:nth-child(1) {
     background-image: url("graphics/to-do-project.jpg");
 }
-.main-grid .project:nth-child(2) {
+.project:nth-child(2) {
     background-image: url("graphics/calculator-project.jpg");
 }
-.main-grid .project:nth-child(3) {
+.project:nth-child(3) {
     background-image: url("graphics/thermometer-project.jpg");
 }
-.main-grid .project:nth-child(4) {
+.project:nth-child(4) {
     background-image: url("graphics/cinema-project.jpg");
 }
-.main-grid .project:nth-child(5) {
+.project:nth-child(5) {
     background-image: url("graphics/guest-list-project.jpg");
 }
-.main-grid .project:nth-child(6) {
+.project:nth-child(6) {
     background-image: url("graphics/strava-analyser-project.jpg");
 }
-
 
 .project-overlay-text  span {
     font-size: 5vw;
     color: var(--secondary-font-color);
 }
 
- .main-grid .project-overlay-text .demo, .git-code, .project-title {
+ .demo, .git-code, .project-title {
     width: 100%;
     height: 100%;
     display: flex;
@@ -583,11 +611,11 @@ main {
      sans-serif;
  }
 
- .main-grid .project-overlay-text .demo {
+ .demo {
     background-color: var(--primary-welcome-bg-color);
  }
 
- .main-grid .project-overlay-text .git-code {
+ .git-code {
      background-color: var(--secondary-welcome-bg-color);
  }
 
@@ -596,6 +624,7 @@ main {
      #projects {
          padding-top: 8rem;
      }
+
      .main-grid {
          grid-template-columns: 1fr;
          left: 9vw;
@@ -603,10 +632,11 @@ main {
          grid-gap: 5vw;
      }
 
-     .main-grid .project {
+     .project {
          width: 82vw;
          height: 60vw;
      }
+
     .project-overlay-text span {
         font-size: 20vw;
      }
@@ -614,18 +644,43 @@ main {
      .project-title h1 {
         font-size: 8vw;
      }
-    }
- @media only screen and (min-width: 481px) and (max-width: 1024px) {
+}
+
+@media only screen and (min-width: 641px) and (max-width: 1024px) {
 
     #projects {
-        padding-top: 8rem;
+        padding-top: 6rem;
     }
+
+    .main-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .project {
+        width: 40vw;
+        height: 30vw;
+    }
+
+    .project-overlay-text span {
+        font-size: 10vw;
+    }
+
+    .project-title h1 {
+        font-size: 4vw;
+    }
+}
+
+ @media only screen and (min-width: 481px) and (max-width: 640px) {
+
+     #projects {
+         padding-top: 8rem;
+     }
 
      .main-grid {
          grid-template-columns: 1fr 1fr;
      }
 
-     .main-grid .project {
+     .project {
          width: 40vw;
          height: 30vw;
      }
